# coding-challenges

./: README.md
compress/: README.md  pyproject.toml
compress/src/compress/: __init__.py
compress/src/compress/comp_algo/: comp_algo.py  comp_algo_factory.py  huffman.py
compress/test/: mid_test.txt.compressed  mid_test.txt.decompressed  short_test.txt.compressed  short_test.txt.decompressed  test.txt.compressed
cut/: README.md  cut.py  cute  main.py  pyproject.toml
json_parser/: pyproject.toml
json_parser/src/: main.py
json_parser/src/json_parser/: __init__.py  main.py
json_parser/src/json_parser/use_cases/: parse.py
json_parser/test/: test_parser.py
json_parser/test/inputs/: invalidcontent.json
wc/: README.md  main.py  pyproject.toml
wc/src/: main.py
wc/src/use_cases/: count_bytes.py  count_chars.py  count_lines.py  count_words.py
wc/src/utils/: input_manager.py
