[project]
name = "json-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wrewsama", email = "andrewlzs512@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.0",
]

[project.scripts]
json-parser = "json_parser:main"

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
